Fixing container overlap

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
  top: 0;
  height: 100%;
  width: 100%;
- color: gray;
  overflow: auto;
 }
 
